# reviewwithfriends-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  release.sh
.github/workflows/: rust.yml
infra/db/: authattempt.sql  friend.sql  friendrequest.sql  like.sql  notification.sql  phoneauth.sql  pic.sql  ping.sql  reply.sql  reports.sql  review.sql  user.sql
infra/kube/: README.md  mob.yaml  spotster.yaml
infra/load/: README.md  locustfile.py
kube/: mob.yaml  pod.yaml
lib/images/: Cargo.toml
lib/images/src/: lib.rs
lib/jwt/: Cargo.toml
lib/validation/: Cargo.toml
migrations/: 20230505190113_user-nulls.sql  20230508163821_user-disabled.sql  20230509225454_reports.sql  20230530025620_phoneauth-nulls.sql  20230530033012_auth-attempt-nulls.sql  20230530033316_friendrequest-nulls.sql  20230530040148_friend-null.sql  20230530040532_pic-null.sql  20230530041215_review-null.sql  20230530162353_reply-null.sql  20230530164443_notification-null.sql  20230607161022_recommend.sql  20230607172116_review-index.sql  20230613181242_like-types.sql  20230616174251_bookmarks.sql
src/: auth_routes.rs  authorization.rs  friend_routes.rs  main.rs  ping_routes.rs  ratelimit.rs  test_routes.rs
src/admin_v1/: get_all_reports.rs  get_user_count.rs  mod.rs  types.rs
src/auth/: jwt.rs  mod.rs  recover.rs  request_code.rs  routes.rs  shared.rs  sign_in.rs  update_phone.rs
src/bookmark_v1/: add_bookmark.rs  bookmark_types.rs  get_all_bookmarks.rs  get_nearby_bookmarks.rs  mod.rs  remove_bookmark.rs
src/compound_types/: mod.rs  review_types.rs
src/db/: admin_query.rs  constants.rs  execute.rs  mod.rs  query.rs  types.rs
src/friend_v1/: accept_friend.rs  add_friend.rs  cancel_friend.rs  contact_discovery.rs  decline_friend.rs  friend_types.rs  full_friends.rs  get_friends.rs  get_ignored_friends.rs  get_incoming_friends.rs  get_outgoing_friends.rs  get_user_friends.rs  ignore_friend.rs  mod.rs  remove_friend.rs
src/likes_v1/: get_current_liked_reviews_full.rs  get_current_likes.rs  get_likes.rs  like_review.rs  like_types.rs  mod.rs  unlike_review.rs
src/notifications_v1/: apn_client.rs  background_worker.rs  confirm_notifications.rs  get_notifications.rs  mod.rs  notification_types.rs
src/pic_v1/: add_profile_pic.rs  add_review_pic.rs  get_profile_pic.rs  get_review_pic.rs  mod.rs  pic_types.rs  remove_review_pic.rs  shared_utils.rs
src/reply_v1/: add_reply.rs  get_replies.rs  mod.rs  remove_reply.rs  reply_types.rs
src/report_v1/: github_client.rs  mod.rs  report_bug.rs  report_user.rs
src/review_v1/: add_review.rs  edit_review.rs  get_full_reviews_from_user.rs  get_latest.rs  (+13 more)
(+12 files in other folders)
