[package]
name = "images"
version = "0.1.0"
edition = "2021"

[dependencies]
rusoto_s3 = { version="0.48.0", default_features=false, features=["rustls"] }
rusoto_core = { version="0.48.0", default_features=false, features=["rustls"] }
rusoto_signature = "0.48.0"
rusoto_credential = "0.48.0"
async-trait = "0.1.53"
